# serializer version: 1
# name: test_switches[switch.test_thermostat_actuator_exercise_disabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_thermostat_actuator_exercise_disabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Actuator exercise disabled',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Actuator exercise disabled',
    'platform': 'airobot',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'actuator_exercise_disabled',
    'unique_id': 'T01A1B2C3_actuator_exercise_disabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.test_thermostat_actuator_exercise_disabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Thermostat Actuator exercise disabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_thermostat_actuator_exercise_disabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[switch.test_thermostat_child_lock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_thermostat_child_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Child lock',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Child lock',
    'platform': 'airobot',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'child_lock',
    'unique_id': 'T01A1B2C3_child_lock',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.test_thermostat_child_lock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Thermostat Child lock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_thermostat_child_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
